  cartridge-related commandline optins to cartridge.c.

* cartridge.c, atari800.man, DOC/USAGE: Add -cart-type and -cart2-type
  options, that allow to choose cartridge type from commandline.

* cartridge.c (CARTRIDGE_ReadConfig, CARTRIDGE_WriteConfig), cfg.c: Support
  loading and saving of the cartridge settings in the config file.


2011-06-08  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* ui_basic.c: Allow opening up the file selector when the given PATH is
  invalid. When a diskette image is mounted, its path is cached in the
  emulator. If, in the meantime, the path to that file have become invalid
  (e.g. the directory in which the file resided have been deleted), then
  reopening the file selector for that particular diskette would have failed.

* cartridge.c: Unify duplicate code in CARTRIDGE_Insert and
  CARTRIDGE_Insert_Second.


2011-06-05  Kostas Nakos  <knakos@gmail.com>
* android/*: Implement extended key remapping,
             Support Xperia play keycodes,
             Remap dpad enter to break,
             New NTSC/PAL tv mode preference


2011-05-22  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* DOC/USAGE, atari800.man, cassette.[ch], ui.c: Add an option for making the
  attached cassette image read-only.

* cassette.[ch]: Cleanup - rearrange function order to place the functions
  related to the SIO patch together at the bottom of the files.

* cartridge.[ch], ui.c: Merge "Insert Cartridge"/"Remove Cartridge" menu
  options into one, to make it consistent with other file-selectors in the
  menu (ie. display filename, Enter=Insert, BkSp=Remove). Ditto for the
  "Insert|Remove SDX Piggyback Cartridge" options.

* ui.c: Don't leave the "Cartridge Management" menu after inserting/removing
  a cartridge. The behaviour was inconsistent with other menus.

* screen.c: Minor fix - missing "else" in Screen_Initialise().


2011-05-21  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* sio.c: Fixed a bug with SIO sounds remaining audible after saving to tape